# CLI-Tool

./: .gitignore  README.md  compose.yaml  main.py  pyproject.toml  setup.py
main/src/: cli.py
main/src/commands/: docker.py  git.py  npm.py
src/: main.py
src/commands/: docker.py  git.py  npm.py
src/root_kit/: cli.py
src/root_kit/commands/: docker.py  env.py  git.py  npm.py
src/root_kit/utils/: template.py
